# seal-inference-experiment

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  batch-axis-inference-execute.sh  batch-axis-inference-execute_pruned-model.sh  channel-wise-inference-execute.sh  channel-wise-inference-execute_pruned-model.sh  channel-wise-re-experiment-72thread.sh  cifar-10-calculate-homOps.sh  cifar-10-inference-execute-18thread.sh  cifar-10-pruned-model-inference-execute.sh  keygen_for_channel-wise.sh  mnist-calculate-homOps.sh  mnist-channel-wise-10k-accuracy.sh  mnist-inference-execute-72thread.sh
src/: example.cpp  gen_keys.cpp  main.cpp  network_sample.cpp
src/cnn/: CMakeLists.txt  conv_2d.cpp  conv_2d.hpp  flatten.cpp  flatten.hpp  layer.cpp  layer.hpp  layer_type.hpp  network.cpp  network.hpp  network_builder.cpp  network_builder.hpp  util.cpp  util.hpp
src/cnn/layers/: activation.cpp  activation.hpp  avg_pool_2d.cpp  avg_pool_2d.hpp  batch_norm.cpp  batch_norm.hpp  conv_2d.cpp  conv_2d.hpp  flatten.cpp  flatten.hpp  layer.cpp  layer.hpp  layer_builder.cpp  layer_builder.hpp  linear.cpp  linear.hpp  util.hpp
src/utils/: constants.cpp  constants.hpp  globals.cpp  globals.hpp  helper.cpp  helper.hpp  load_dataset.cpp  types.hpp
train_model/: channel_pruning_execute.sh  cifar-gap_execute_0106.sh  cifar_execute.sh  cifar_prune_execute_0124.sh  copy_models_for_pruning.sh  execute.sh  mnist_execute.sh  mnist_prune_execute_0125.sh  pyproject.toml  train_execute.sh
train_model/cifar-10/: 5layer_cnn.py  5layer_cnn_old.py  5layer_cnn_test.py  preact_resnet.py
train_model/cifar-10/models/: preact_resnet.py  resnet9.py
train_model/cifar-10/saved_models/: 5layer_cnn-mish-1214-best.pt  5layer_cnn-mish-82.04_150epoch-1214_2329-params.h5  5layer_cnn-mish-BN-1214-best.pt  5layer_cnn-mish-BN-1224-best.pt  5layer_cnn-mish-BN-85.33_150epoch-1215_0026-params.h5  (+374 more)
train_model/meta_former/: train.py
train_model/mnist/: 3layer_cnn.py  3layer_cnn_old.py  3layer_cnn_sample.py  load_model_test.py
train_model/utils/: constants.py  torch_hdf5.py  torch_json.py
(+301 files in other folders)
